index and cart rough layout done

--- a/cart.html
+++ b/cart.html
@@ -43,6 +43,19 @@
                         <th>Quantity</th>
                         <th>Item</th>
                     </tr>
+
+                    <!-- REMOVE THIS EVENTUALLY -->
+                    <tr>
+                        <td><button>X</button></td>
+                        <td>100</td>
+                        <td>Dragon Meat</td>
+                    </tr>
+                    <tr>
+                        <td><button>X</button></td>
+                        <td>50</td>
+                        <td>octopUSB</td>
+                    </tr>
+                    <!-- REMOVE THIS EVENTUALLY -->
                 </thead>
                 <tbody></tbody>
                 <tfoot></tfoot>
