--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
               <li>Once you've made your selection, click the "Add to Cart" button</li>
               <li>When you are ready to purchase, click the "Cart" link above to view your cart and check out</li>
             </ol>
+            
+            <!-- DELETE THIS UL EVENTUALLY -->
+            <ul class="products"> 
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+              <li><p>Product Name</p><img src="http://via.placeholder.com/100x100" alt=""></li>
+            </ul>
+            <!-- DELETE THIS UL EVENTUALLY -->
+            
           </div>
         </div>
       </section>
