code for success animation added to CSS, not working in event handler

--- a/cart.html
+++ b/cart.html
@@ -45,22 +45,7 @@
                     </tr>
 
                 </thead>
-                <tbody>
-
-                    <!-- REMOVE THIS EVENTUALLY -->
-                    <tr>
-                        <td><button>X</button></td>
-                        <td>100</td>
-                        <td>Dragon Meat</td>
-                    </tr>
-                    <tr>
-                        <td><button>X</button></td>
-                        <td>50</td>
-                        <td>octopUSB</td>
-                    </tr>
-                    <!-- REMOVE THIS EVENTUALLY -->
-
-                </tbody>
+                <tbody></tbody>
                 <tfoot></tfoot>
             </table>
         </div>
